adding etl module with postgresql connector to ec2

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@
 
 [metadata]
 name = proto
-description = Add a short description here!
+description = Prototype project of NeoGlia.
 author = Daniel Homola
 author-email = daniel@neoglia.com
 license = mit
-long-description = file: README.rst
+long-description = file: README.md
 long-description-content-type = text/x-rst; charset=UTF-8
 url = https://github.com/pyscaffold/pyscaffold/
 project-urls =
