--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install proto[PDF]` like:
+# `pip install neoglia[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -53,10 +53,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = proto.module:function
+#     script_name = neoglia.module:function
 # For example:
 # console_scripts =
-#     fibonacci = proto.skeleton:run
+#     fibonacci = neoglia.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
