fixing training and metrics for eicu and adding optimizer params to config

--- a/demo/mnist_config.yml
+++ b/demo/mnist_config.yml
@@ -1,2 +1,7 @@
 train_dataset_name: mnist_train
 test_dataset_name: mnist_test
+fed_after_n_batches: 10
+train_epochs: 50
+optimizer_params:
+  lr: 0.1
+  momentum: 0.9
